--- a/src/components/widgets/DashboardWidgets/styles/ProfitWidget.css
+++ b/src/components/widgets/DashboardWidgets/styles/ProfitWidget.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Bebas+Neue&family=Inspiration&family=Montserrat:ital,wght@0,500;0,600;1,100&family=Raleway&family=Roboto+Mono:wght@500&family=Roboto:wght@300&display=swap');
-.recharts-curve{
-   height: 50px;
-   }
+.title-prof{
+   color: rgb(84, 84, 84);
+   font-weight: 500;
+}
